fix: use Java 11 compatible Collectors.toList() instead of Java 16+ toList()
The SDK is configured for Java 11 (sdk/java/build.gradle:27), but the previous
code used .toList() which is only available in Java 16+. Changed to use
.collect(Collectors.toList()) for Java 11 compatibility.

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>