@@ -7,6 +7,7 @@ import com.pulumi.webflow.RedirectArgs;
 
 import java.util.List;
 import java.util.ArrayList;
+import java.util.stream.Collectors;
 
 public class App {
     public static void main(String[] args) {
@@ -73,7 +74,7 @@ public class App {
             ctx.export("externalRedirectId", externalRedirect.id());
             ctx.export("bulkRedirectIds", Output.all(bulkRedirects.stream()
                 .map(Redirect::id)
-                .toList()));
+                .collect(Collectors.toList())));
         });
     }
 }
